--- a/index.html
+++ b/index.html
@@ -1,86 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
+
+
+    <!-- Google Fonts: Inter -->
     
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;500;600&display=swap" rel="stylesheet">
-
-    <!-- Link to external CSS file -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
+    <!-- Container -->
     <div class="container">
+        <!-- Heading Text -->
         <h2 class="heading-text">Password Generator</h2>
-
+        <!-- Content Area -->
         <div class="content-area">
-            <!-- Result Box: ID added for JS listener -->
-            <div class="result-box" id="resultBox">
-                <span id="result">Click Generate</span>
-                <!-- SVG Icon for Copy -->
-                <svg id="copyIcon" class="copy-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
-                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-                </svg>
+            <div class="result-box"> <!-- Result Box -->
+                <span>xdrt</span>
             </div>
-
-            <!-- Length Box -->
-            <div class="length-box">
-                <p class="badge">Length <span id="lengthText" class="length-indicator">4</span></p>
-                <!-- Length Choices Box: ID added for JS listener -->
-                <div class="length-choices-box" id="lengthOptionsContainer">
-                    <span class="length-option active" data-length="4">4</span>
-                    <span class="length-option" data-length="8">8</span>
-                    <span class="length-option" data-length="12">12</span>
-                    <span class="length-option" data-length="16">16</span>
-                    <span class="length-option" data-length="20">20</span>
+            <div class="length-box"> <!-- Length Box -->
+                <p class="badge">Length <span>4</span></p> <!-- Box Title -->
+                <div class="length-choices-box">
+                    <span class="active">4</span>
+                    <span>8</span>
+                    <span>16</span>
+                    <span>20</span>
+                    <span>26</span>
                 </div>
             </div>
-
-            <!-- Settings Box -->
-            <div class="settings-box">
-                <p class="badge" style="padding-left: 0;">Character Sets</p>
-
-                <!-- Uppercase is always included but styled as a toggle -->
+            <div class="settings-box"> <!-- Settings Box -->
+                <p class="badge">Settings</p> <!-- Box Title -->
                 <div class="option-box">
-                    <h4 class="option-title">Include Uppercase (A-Z)</h4>
-                    <div class="toggle-switch active" id="btnUppercase" disabled>
-                        <span class="toggle-slider"></span>
+                    <h4 class="option-title">Include Numbers</h4>
+                    <div class="option-button">
+                        <span id="include_numbers" data-value="1234567890"></span>
                     </div>
                 </div>
-
                 <div class="option-box">
-                    <h4 class="option-title">Include Numbers (0-9)</h4>
-                    <!-- ID for JS listener -->
-                    <div class="toggle-switch" id="btnNumbers" data-active="false">
-                        <span class="toggle-slider"></span>
-                    </div>
-                </div>
-
-                <div class="option-box">
-                    <h4 class="option-title">Include Symbols (!@#$)</h4>
-                    <!-- ID for JS listener -->
-                    <div class="toggle-switch" id="btnSymbols" data-active="false">
-                        <span class="toggle-slider"></span>
+                    <h4 class="option-title">Include Symbols</h4>
+                    <div class="option-button">
+                        <span id="include_symbols" data-value="@#$%&!-_~?+"></span>
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- Generate Button -->
-        <button class="generate-btn" id="generateBtn">Generate Password</button>
-
-        <!-- Message Box for copy confirmation (hidden by default) -->
-        <div id="messageBox" class="message-box">
-            Copied to clipboard!
-        </div>
+        <button class="generateBtn">Generate</button>
     </div>
+    <!-- End Container -->
 
-    <!-- Link to external JS file -->
+
     <script src="script.js"></script>
 </body>
+
 </html>
