--- a/index.html
+++ b/index.html
@@ -6,25 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
 
-
-    <!-- Google Fonts: Inter -->
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;500;600&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <!-- Container -->
     <div class="container">
-        <!-- Heading Text -->
         <h2 class="heading-text">Password Generator</h2>
-        <!-- Content Area -->
         <div class="content-area">
-            <div class="result-box"> <!-- Result Box -->
-                <span>xdrt</span>
+            <div class="result-box"> <span></span>
             </div>
-            <div class="length-box"> <!-- Length Box -->
-                <p class="badge">Length <span>4</span></p> <!-- Box Title -->
-                <div class="length-choices-box">
+            <div class="length-box"> <p class="badge">Length <span>4</span></p> <div class="length-choices-box">
                     <span class="active">4</span>
                     <span>8</span>
                     <span>16</span>
@@ -32,28 +25,22 @@
                     <span>26</span>
                 </div>
             </div>
-            <div class="settings-box"> <!-- Settings Box -->
-                <p class="badge">Settings</p> <!-- Box Title -->
-                <div class="option-box">
+            <div class="settings-box"> <p class="badge">Settings</p> <div class="option-box">
                     <h4 class="option-title">Include Numbers</h4>
-                    <div class="option-button">
-                        <span id="include_numbers" data-value="1234567890"></span>
+                    <div class="option-button" id="btn_numbers">
+                        <span data-value="1234567890"></span>
                     </div>
                 </div>
                 <div class="option-box">
                     <h4 class="option-title">Include Symbols</h4>
-                    <div class="option-button">
-                        <span id="include_symbols" data-value="@#$%&!-_~?+"></span>
+                    <div class="option-button" id="btn_symbols">
+                        <span data-value="@#$%&!-_~?+"></span>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Generate Button -->
         <button class="generateBtn">Generate</button>
     </div>
-    <!-- End Container -->
-
-
     <script src="script.js"></script>
 </body>
 
